--- a/styles.css
+++ b/styles.css
@@ -25,3 +25,27 @@ header {
 .intro-text p {
   font-size: 22px;
 }
+
+section {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.page2 {
+  text-align: center;
+  width: 70%;
+}
+
+.page2 h1 {
+  margin-bottom: 20px;
+  font-size: 25px;
+}
+
+section img {
+  width: 90%;
+  height: 70%;
+  object-fit: cover;
+}
