--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
 body {
   background-color: #f9b9b7;
   font-family: sans-serif;
+  transition: all 0.5s ease;
 }
 
 header {
@@ -48,4 +49,8 @@ section img {
   width: 90%;
   height: 70%;
   object-fit: cover;
+}
+
+.bg-activ {
+  background-color: white;
 }
